# genjishimada-ocr

./: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  server.py
.github/workflows/: dev-deploy.yml  prod-deploy.yml
